# FAMA

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: factor_cache  fof_price_updating.parquet
data/factor_values/: alpha_100.csv  alpha_101.csv  alpha_102.csv  alpha_103.csv  alpha_104.csv  alpha_105.csv  alpha_106.csv  alpha_107.csv  alpha_108.csv  alpha_109.csv  alpha_110.csv  alpha_111.csv  alpha_112.csv  alpha_113.csv  alpha_114.csv  alpha_115.csv  alpha_116.csv  alpha_117.csv  alpha_118.csv  alpha_119.csv  alpha_120.csv  alpha_121.csv  alpha_83.csv  alpha_84.csv  alpha_85.csv  alpha_86.csv  alpha_87.csv  alpha_88.csv  alpha_89.csv  alpha_90.csv  alpha_91.csv  alpha_92.csv  alpha_93.csv  alpha_94.csv  alpha_95.csv  alpha_96.csv  alpha_97.csv  alpha_98.csv  alpha_99.csv
fama/: cli.py
fama/coe/: chain.py
fama/config/: defaults.yaml
fama/css/: cluster.py
fama/data/: __init__.py  dataloader.py  factor_space.py  kun_backend.py
fama/factors/: alpha_lib.py  opcards.py  transforms.py
fama/mining/: llm_client.py  prompt_builder.py
fama/utils/: io.py
prompts/: alpha_prompt_template.txt
tests/: test_api_shapes.py  test_cli_scaffolding.py  test_prompt_builder.py
